<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x6_control_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1085954163@qq.com">hyc</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>lkactuator_msg</depend>
  <depend>lkactuator_python</depend>
  <depend>x6_kinematics</depend>
  <depend>x6_msg</depend>
  <depend>aimooe_pkg</depend>
  <depend>msg_codec_py</depend>
  <depend>interfaces_py</depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
